# 2048

./: .clang-format  .gitignore  Cargo.toml  ReadMe.md
.github/workflows/: codeql.yml  release.yml
src/: CMakeLists.txt  array_helper.cpp  colour.rs  data.rs  direction.rs  game.cpp  game.rs  game_board.cpp  game_board.rs  game_board_state.cpp  game_board_state.rs  game_data.cpp  main.cpp  main.rs  tiles.rs  tiles_state.rs
src/game_board/: game_board_internal.rs  window_ext.rs
src/game_board_state/: game_board_state_internal.rs
src/headers/: array_helper.hpp  colour.hpp  direction.hpp  game.hpp  game_board.hpp  game_board_state.hpp  game_data.hpp
src/tiles_state/: tiles_state_internal.rs
